# CS238-Final-Project

./: LICENSE  README.md  cs238_final_project_training.ipynb  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
collision_avoidance/collision_avoidance/: test_simulation.py
collision_avoidance/collision_avoidance/simulation/: simulation.py
cs238_final_project/RL/: train_DQN.py
cs238_final_project/collision_avoidance/: environment.py
cs238_final_project/simulation/: advcat.py  satellite.py  simulation.py
tests/: test_astrogator.ipynb  test_cs238_final_project.py  test_environment.py  test_simulation.py
