[tool.poetry]
name = "cs238-final-project"
version = "0.1.0"
description = ""
authors = ["Danny Kolano <dkolano2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
"agi.stk12" = {path = "bin/agi.stk12-12.2.0-py3-none-any.whl"}
numpy = "\b"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
